Restructured the files

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@ EmoMusic Journal Hub_Whitepaper report.pdf
 notes.txt
 Project Plan.docx
 Music Gen/Music_Recommendation_Based_on_Face_Emotion_Recogni.pdf
+code/ML/Music Gen/Music_Recommendation_Based_on_Face_Emotion_Recogni.pdf
+code/ML/Music Gen/Senti-Mozart Music Generation from Emotions.pdf
